# AutowareArchitectureProposal.iv

./: README.md  build_depends.repos
.github/: labeler.yml
common/math/signal_processing/: CMakeLists.txt  package.xml
common/math/signal_processing/include/signal_processing/: lowpass_filter_1d.h
common/math/signal_processing/src/: lowpass_filter_1d.cpp
common/math/signal_processing/test/: test_signal_processing.test
common/math/signal_processing/test/src/: lowpass_filter_1d_test.cpp
control/control_performance_analysis/: CMakeLists.txt  package.xml
control/control_performance_analysis/config/: control_performance_analysis_param.yaml
control/control_performance_analysis/include/: control_performance_utils.h  controller_performance_core.h  controller_performance_node.h
control/control_performance_analysis/launch/: controller_performance_analysis.launch
control/control_performance_analysis/msg/: ErrorStamped.msg
control/control_performance_analysis/src/: control_performance_utils.cpp  controller_performance_core.cpp  controller_performance_node.cpp  main.cpp
control/external_cmd_selector/: CMakeLists.txt  package.xml
control/external_cmd_selector/include/external_cmd_selector/: external_cmd_selector_node.hpp
control/external_cmd_selector/launch/: external_cmd_selector.launch
control/external_cmd_selector/src/external_cmd_selector/: external_cmd_selector_node.cpp  main.cpp
docs/: Doxyfile
perception/object_recognition/detection/lidar_centerpoint/: CMakeLists.txt  README.md  package.xml
perception/object_recognition/detection/lidar_centerpoint/include/lidar_centerpoint/: node.h
perception/object_recognition/detection/lidar_centerpoint/launch/: lidar_centerpoint.launch
perception/object_recognition/detection/lidar_centerpoint/lib/include/: centerpoint_trt.h  pointcloud_densification.h  voxel_generator.h
perception/object_recognition/detection/lidar_centerpoint/lib/src/: centerpoint_trt.cpp  pointcloud_densification.cpp  voxel_generator.cpp
perception/object_recognition/detection/lidar_centerpoint/src/: main.cpp  node.cpp
perception/util/visualizer/traffic_light_visualization/: CMakeLists.txt  package.xml
perception/util/visualizer/traffic_light_visualization/include/traffic_light_map_visualizer/: node.hpp
perception/util/visualizer/traffic_light_visualization/launch/: traffic_light_map_visualizer.launch
perception/util/visualizer/traffic_light_visualization/src/traffic_light_map_visualizer/: main.cpp  node.cpp
planning/planning_diagnostics/planning_error_monitor/: CMakeLists.txt  package.xml
planning/planning_diagnostics/planning_error_monitor/include/planning_error_monitor/: planning_error_monitor.h
planning/planning_diagnostics/planning_error_monitor/launch/: planning_error_monitor.launch
planning/planning_diagnostics/planning_error_monitor/src/: main.cpp  planning_error_monitor.cpp
planning/planning_diagnostics/planning_error_monitor/test/: test_planning_error_monitor.test
planning/planning_diagnostics/planning_error_monitor/test/src/: test_main.cpp  test_planning_error_monitor_functions.cpp  test_planning_error_monitor_helper.hpp  test_planning_error_monitor_pubsub.cpp
planning/scenario_planning/common/motion_velocity_smoother/: CMakeLists.txt  motion_velocity_smoother-design.ja.md  motion_velocity_smoother-design.md  package.xml
planning/scenario_planning/common/motion_velocity_smoother/cfg/: MotionVelocitySmoother.cfg
planning/scenario_planning/common/motion_velocity_smoother/config/: JerkFiltered.yaml  L2.yaml  Linf.yaml  default_motion_velocity_smoother.yaml
planning/scenario_planning/common/motion_velocity_smoother/include/motion_velocity_smoother/: linear_interpolation.h  motion_velocity_smoother.hpp  resample.hpp  trajectory_utils.hpp
planning/scenario_planning/common/motion_velocity_smoother/include/motion_velocity_smoother/smoother/: jerk_filtered_smoother.hpp  l2_pseudo_jerk_smoother.hpp  linf_pseudo_jerk_smoother.hpp  smoother_base.hpp
planning/scenario_planning/common/motion_velocity_smoother/launch/: motion_velocity_smoother.launch
planning/scenario_planning/common/motion_velocity_smoother/scripts/: closest_velocity_checker.py  trajectory_visualizer.py
planning/scenario_planning/common/motion_velocity_smoother/src/: linear_interpolation.cpp  main.cpp  motion_velocity_smoother.cpp  resample.cpp  trajectory_utils.cpp
planning/scenario_planning/common/motion_velocity_smoother/src/smoother/: jerk_filtered_smoother.cpp  l2_pseudo_jerk_smoother.cpp  linf_pseudo_jerk_smoother.cpp  smoother_base.cpp
planning/scenario_planning/lane_driving/behavior_planning/behavior_path_planner/: CMakeLists.txt  Readme.md  package.xml
planning/scenario_planning/lane_driving/behavior_planning/behavior_path_planner/config/: behavior_path_planner.yaml  behavior_path_planner_tree_lane_change_only.xml
planning/scenario_planning/lane_driving/behavior_planning/behavior_path_planner/config/avoidance/: avoidance.yaml
planning/scenario_planning/lane_driving/behavior_planning/behavior_path_planner/config/lane_change/: lane_change.yaml
planning/scenario_planning/lane_driving/behavior_planning/behavior_path_planner/config/side_shift/: side_shift.yaml
planning/scenario_planning/lane_driving/behavior_planning/behavior_path_planner/include/behavior_path_planner/: behavior_path_planner.hpp  behavior_tree_manager.hpp  data_manager.hpp  parameters.hpp  path_utilities.hpp  route_handler.hpp  turn_signal_decider.hpp  utilities.hpp
planning/scenario_planning/lane_driving/behavior_planning/behavior_path_planner/launch/: behavior_path_planner.launch
planning/scenario_planning/lane_driving/behavior_planning/behavior_path_planner/src/: behavior_path_planner.cpp  behavior_tree_manager.cpp  main.cpp  path_utilities.cpp  route_handler.cpp  turn_signal_decider.cpp  utilities.cpp
planning/scenario_planning/lane_driving/behavior_planning/behavior_path_planner/src/path_shifter/: path_shifter.cpp
planning/scenario_planning/lane_driving/behavior_planning/behavior_path_planner/src/scene_module/: scene_module_bt_node_interface.cpp
(+360 files in other folders)
