<?xml version="1.0"?>
<package format="2">
    <name>control_performance_analysis</name>
    <version>0.1.0</version>
    <description>Controller Performance Evaluation</description>
    <maintainer email="ali.boyali@tier4.jp">Ali Boyali</maintainer>
    <license>Apache 2</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <depend>roscpp</depend>

    <depend>autoware_planning_msgs</depend>
    <depend>autoware_control_msgs</depend>
    <depend>autoware_vehicle_msgs</depend>
    <depend>autoware_utils</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_eigen</depend>
    <depend>tf2_ros</depend>

    <exec_depend>message_runtime</exec_depend>

    <export>
    </export>
</package>
