<?xml version="1.0"?>
<package format="3">
  <name>external_cmd_selector</name>
  <version>0.1.0</version>
  <description>The external_cmd_selector package</description>
  <maintainer email="kenji.miyake@tier4.jp">Kenji Miyake</maintainer>
  <author email="kenji.miyake@tier4.jp">Kenji Miyake</author>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>autoware_control_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
