<?xml version="1.0"?>
<package format="2">
  <name>planning_error_monitor</name>
  <version>0.1.0</version>
  <description>ros node for monitoring planning error </description>

  <maintainer email="yutaka.shimizu@tier4.jp">Yutaka Shimizu</maintainer>


  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_planning_msgs</depend>
  <depend>autoware_utils</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>
  </export>
</package>
