<?xml version="1.0"?>
<package>
  <name>lidar_centerpoint</name>
  <version>1.0.0</version>
  <description>The lidar_centerpoint package</description>

  <maintainer email="yusuke.muramatsu@tier4.jp">Yusuke Muramatsu</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>autoware_perception_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>autoware_perception_msgs</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>

  <export></export>
</package>
