<?xml version="1.0"?>
<package format="2">
  <name>motion_velocity_smoother</name>
  <version>0.1.0</version>
  <description>The motion_velocity_smoother package</description>

  <maintainer email="horibe.takamasa@gmail.com">Takamasa Horibe</maintainer>
  <maintainer email="fumiya.watanabe@tier4.jp">Fumiya Watanabe</maintainer>
  <maintainer email="yutaka.shimizu@tier4.jp">Yutaka Shimizu</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>autoware_planning_msgs</depend>
  <depend>autoware_utils</depend>
  <depend>boost</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>osqp_interface</depend>

  <export>
  </export>
</package>
