<?xml version="1.0"?>
<package format="2">
  <name>behavior_path_planner</name>
  <version>0.1.0</version>
  <description>The behavior_path_planner package</description>

  <maintainer email="takamasa.horibe@tier4.jp">Takamasa Horibe</maintainer>

  <author email="takamasa.horibe@tier4.jp">Takamasa Horibe</author>
  <author email="ryohsuke.mitsudome@tier4.jp">mitsudome-r</author>
  <author email="fumiya.watanabe@tier4.jp">Fumiya Watanabe</author>


  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Autoware -->
  <depend>autoware_perception_msgs</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>autoware_utils</depend>
  <depend>spline_interpolation</depend>

  <!-- Third party -->
  <depend>lanelet2_extension</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>libopencv-dev</depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
</package>
